--- a/trees.html
+++ b/trees.html
@@ -62,7 +62,7 @@
                         <span style="color: #76AD3A;" >Explore the </span><span style='font-weight: bold;color:#76AD3A'>Map</span>
                     </button>
                 </a>&nbsp;&nbsp;
-                
+
                 <button class="ui inverted olive basic button">
                     <span style="color: #76AD3A;">Learn about the </span><span style='font-weight: bold;color:#76AD3A'>Issues</span>
                 </button>&nbsp;&nbsp;
@@ -100,6 +100,21 @@
             
             <div id='map' style='height: 500px;'></div>
         </div>  
+
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+
+
+
+        <!--statistic -->
+        <h2 class="ui olive header" id="statistic_location">Statistic</h2>
+        <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
+        <h3 style="color:#989898">Details</h3>
+        <br />
+        <!--Tableau chart-->
     </div>
 
 
