--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <!--map-->
                         
             <div id='map' style='height: 500px;'>
-            <nav id="menu"></nav>       
+            <div id="menu"></div>       
             </div>
             <!--legend-->
             <h2 class="ui olive header">Map colours and symbols</h2>
