--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           
           inline     : true,
           hoverable  : true,
-          position   : 'bottom right',
+          position   : 'bottom left',
           delay: {
             show: 300,
             hide: 800
