--- a/index.html
+++ b/index.html
@@ -346,6 +346,41 @@
 
     </div>
 
+		<!--schedule -->
+        <div id="schedule_location">
+          <br />
+          <br />
+          <br />
+        </div>
+        <h2 class="ui olive header" >Schedule</h2>
+        <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
+        <h3 style="color:#989898">schedule.</h3>
+        <br />
+        <br />
+
+        <div id = "schedule">
+        <iframe width="100%" height="520" frameborder="0" src="https://sdavuluri.carto.com/builder/efffc4f8-e6a1-4c45-87b1-90fa008b8305/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+        </div>
+
+    </div>
+	
+		<!--schedule -->
+        <div id="schedule_location">
+          <br />
+          <br />
+          <br />
+        </div>
+        <h2 class="ui olive header" >Schedule</h2>
+        <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
+        <h3 style="color:#989898">schedule.</h3>
+        <br />
+        <br />
+
+        <div id = "schedule">
+        <iframe width="100%" height="520" frameborder="0" src="https://sdavuluri.carto.com/builder/69e20b53-dea0-49d6-ac92-29ffac6f65ac/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+        </div>
+
+    </div>
 
 
 
