add annotation for schedule map

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <h2 class="ui olive header" >MAP</h2>
         <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
-        <p style="font-size:17px; color:#989898">Explore the tree data - Individual tree data for City of Melbourne trees is presented below. <b>Pan</b> and <b>Zoom</b> into different areas of Melbourne city, <b>Hover</b> on the Filter Menu to select between different filters, and <b>Hover</b> on tree symbols to reveal details of the tree.</h3>
+        <p style="font-size:17px; color:#989898">Explore the tree data - Individual tree data for City of Melbourne trees is presented below. <b>Pan</b> and <b>Zoom</b> into different areas of Melbourne city, <b>Hover</b> on the Filter Menu to select between different filters, and <b>Hover</b> on tree symbols to reveal details of the tree.</p>
         <br />
         <div class="ui container">   
             <div class="ui inverted secondary pointing menu">
@@ -367,6 +367,12 @@
         </div>
         <h2 class="ui olive header" >Planting Schedule</h2>
         <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
+
+        <p style="font-size:17px; color: white">The tree planting map shows the schedule of each street that will be planted. There are streets where tree planting is completed. For the rest, the schedule time information is shown in the popup on hover or can be visualized by color. When prioritising where and when to plant, it is important to spend resources on the streets that are most in need. For example, which street has highest intensity of people where low canopy cover exsits; which streets will gain more by planting trees etc.</p>
+        <h3 style="color:#989898">Map: </h3>
+        <p style="font-size:17px; color:#989898"> - Hover street will show a popup which includes schedule time and street name<br>
+        - The area schedule count will dynamically show the number of schedules for the area shown in the maps<br>
+        - To filter streets by schedule time, select the schedule time in the legend<br></p>
         <br />
         <iframe width="100%" height="520" frameborder="0" src="https://lisalisalisa.carto.com/builder/8bdad79b-4d69-4e52-9769-2c4725f562d5/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     </div>
