design new tableau graphs

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         </div>
         <h2 class="ui olive header" >MAP</h2>
         <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
-        <p style="font-size:17px; color:#989898">Explore the tree data - Individual tree data for City of Melbourne trees is presented below. <b>Pan</b> and <b>Zoom</b> into different areas of Melbourne city, <b>Hover</b> on the Filter Menu to select between different filters, and <b>Hover</b> on tree symbols to reveal details of the tree.</p>
+        <h3 style="font-size:17px; color:white">Explore the tree data</h3>
+        <p style="font-size:19px; color:#989898">Individual tree data for City of Melbourne trees is presented below. <b>Pan</b> and <b>Zoom</b> into different areas of Melbourne city, <b>Hover</b> on the Filter Menu to select between different filters, and <b>Hover</b> on tree symbols to reveal details of the tree.</p>
         <br />
         <div class="ui container">   
             <div class="ui inverted secondary pointing menu">
@@ -340,7 +341,16 @@
         <br />
         <br />
         
-    
+          <!--URBAN FOREST ISSUES-->
+        <div id="issues_location">
+          <br />
+          <br />
+        </div>
+        <h2 class="ui olive header" >URBAN FOREST ISSUES</h2>
+        <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
+        <h3 style="font-size:19px; color:white">How important is the age diversity?</h3>
+        <p style="font-size:17px; color:#989898">.</p>
+        <br />
 
 
         <!--statistic -->
