--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
         </div>
         <h2 class="ui olive header" >TREE MAP</h2>
         <hr style="border:1 dashed #987cb9" width="100%" color=#76AD3A SIZE=1>
-        <h3 style="color:#989898">Individual tree data for City of Melbourne trees is presented below. Pan and Zoom into different areas of Melbourne, click on tree symbols to reveal details, and select between different locations and filters.</h3>
+
+        <h3 style="font-size:17px; color:white">Explore the tree data</h3>
+        <p style="font-size:19px; color:#989898">Individual tree data for City of Melbourne trees is presented below. <b>Pan</b> and <b>Zoom</b> into different areas of Melbourne city, <b>Hover</b> on the Filter Menu to select between different filters, and <b>Hover</b> on tree symbols to reveal details of the tree.</p>
         <br />
         <div class="ui container">   
             <div class="ui inverted secondary pointing menu">
