--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <div class="ui container">
          <a href="#top" class="header item" id="title">
              <img src="./img/logo.svg">&nbsp;
-             Green City Visual
+             City Tree Planting
          </a>
 
         <a class="ui right item " href="#map_location">
@@ -63,15 +63,16 @@
             <br />
             <br />
             <div class="ui container">
-                <h1 class="title_tree">Urban Forest in Melbourne</h1>
+                <h1 class="title_tree">City of Melbourne - Tree Planting</h1>
                 <br />
                 <p style="color: #CCCCC1;">Melbourne’s tree population is vast – we have 70,000 council-owned trees,
-                <p style="color: #CCCCC1;">worth around $650 million.  This website enables you to explore this dataset </p>
-                <p style="color:#CCCCC1;">and some of the challenges facing Melbourne’s Urban Forest.</p>
+                <p style="color: #CCCCC1;">worth around $650 million.  This website enables you to explore the current 
+                <p style="color:#CCCCC1;">tree planting stutus within the city of Melbourne and some of the challenges </p>
+                <p style="color:#CCCCC1;">facing Melbourne’s Urban Forest.</p>
             </div>
             <br />
             <br />
-            <div class="ui container">
+            <!-- <div class="ui container">
                 <a href="#map_location">
                     <button class="ui inverted olive basic button" >
                         <span style="color: #76AD3A;" >Explore the </span><span style='font-weight: bold;color:#76AD3A'>Tree Map</span>
@@ -84,14 +85,14 @@
                 <button class="ui inverted olive basic button">
                     <span style="color: #76AD3A;">Learn more about </span><span style='font-weight: bold;color:#76AD3A'>Gree City</span>
                 </button>&nbsp;&nbsp;
-            </div>
+            </div> -->
             <br />
             <br />
             <br />
             <div class="ui container">
-                <div><i class="arrow inverted right icon"></i><a href="https://data.melbourne.vic.gov.au/Environment/Trees-with-species-and-dimensions-Urban-Forest-/fp38-wiyy">Find out the data source </a></div>
+                <!-- <div><i class="arrow inverted right icon"></i><a href="https://data.melbourne.vic.gov.au/Environment/Trees-with-species-and-dimensions-Urban-Forest-/fp38-wiyy">Find out the data source </a></div>
                 <div><i class="arrow inverted right icon"></i><a href="https://www.melbourne.vic.gov.au/community/greening-the-city/urban-forest/Pages/urban-forest.aspx">Find out more about the Urban Forest Strategy</a></div>
-                <br />                
+                <br />   -->              
             </div>
         </div>
 
