--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <br />
             <br />
             <br />
-            <div class="ui container">
+            <div class="ui container" style="padding-left: 20px;">
                 <h1 class="title_tree">City of Melbourne - Tree Planting</h1>
                 <br />
                 <p style="color: #CCCCC1;">Melbourne’s tree population is vast – we have 70,000 council-owned trees,
